--- a/northwindj/northwindj/pom.xml
+++ b/northwindj/northwindj/pom.xml
@@ -226,7 +226,13 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
-
+		<!--  mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.37</version>
+		</dependency>
+		
     
   </dependencies>
   <build>
