--- a/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
+++ b/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,10 @@ encoding//src/main/webapp/WEB-INF/pages/categories/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/categories/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/customers/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/customers/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/employees/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/employees/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/employees/tabEducation.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/employees/tabExperiences.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/index.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/templates/loginTemplate.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/templates/template.jsp=UTF-8
