--- a/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
+++ b/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
@@ -5,8 +5,18 @@ encoding//src/main/webapp/WEB-INF/pages/customers/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/customers/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/employees/searchModal.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/tabEducation.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/tabExperiences.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/index.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/products/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/products/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/products/searchModal.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/suppliers/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/suppliers/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/suppliers/searchModal.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/territories/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/territories/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/templates/loginTemplate.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/templates/template.jsp=UTF-8
+encoding//src/main/webapp/resources/css/side-menu.css=UTF-8
