--- a/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
+++ b/northwindj/northwindj/.settings/org.eclipse.core.resources.prefs
@@ -3,15 +3,22 @@ encoding//src/main/webapp/WEB-INF/pages/categories/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/categories/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/customers/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/customers/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/customers/searchModal.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/searchModal.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/tabEducation.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/employees/tabExperiences.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/index.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/orders/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/orders/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/products/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/products/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/products/searchModal.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/purchases/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/purchases/list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/shippers/entry.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/shippers/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/suppliers/entry.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/suppliers/list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/pages/suppliers/searchModal.jsp=UTF-8
